Fixed slider flickering

--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -9,6 +9,8 @@
   $slider-horizontal-end: 0,
   $slider-vertical-margin-bottom: 0,
   $slider-track-active-size-offset: 1px,
+  $slider-transition: none,
+  $slider-thumb-label-transition: none,
 
   $shadow-key-umbra-opacity: rgba(#CA5E3C, 0.2),
   $shadow-key-penumbra-opacity: rgba(#CA5E3C, 0.14),
